SERVER-40790 Test downgrading from FCV4.2 to FCV4.0 with a large running transaction will fail on commit.